fix navbar height of logo on mobile (#68)
* bump dev

* fix navbar height of logo on mobile

* fix sidenav height of logo on mobile

--- a/src/stmaterial/assets/styles/sections/_stm-sidenav.scss
+++ b/src/stmaterial/assets/styles/sections/_stm-sidenav.scss
@@ -6,8 +6,17 @@
   display: flex;
   height: $navbar-height;
 
+  @media (max-width: $medium-screen-up) {
+    height: $navbar-height-mobile;
+  }
+
   img {
     max-height: $navbar-height;
+
+    @media (max-width: $medium-screen-up) {
+      max-height: $navbar-height-mobile;
+    }
+
     padding-right: 15px;
   }
 }
